# etnsc-local

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: docker_upstream.yml  release.yml  test.yml
docker/: Dockerfile  entrypoint.sh  healthcheck.sh
npm/: index.js  package.json.sub.tmpl  package.json.tmpl
npm/app/: index.js
src/: docker-compose.yaml  main.rs
src/commands/: clear.rs  init.rs  lifecycle.rs  mod.rs  start.rs  stop.rs
test/: ruff.toml  test_node.py
