[dependencies]
clap = {version = "4.5.31", features = ["derive", "env"]}
colored = "3.0.0"
dialoguer = "0.11.0"
system = "0.3.3"

[package]
authors = ["Stanislav Terliakov <terlya.stas@gmail.com>"]
categories = ["command-line-utilities"]
description = "A tool for quick Electroneum local node setup and management"
edition = "2021"
homepage = "https://github.com/sterliakov/etnsc-local"
keywords = ["electroneum", "cli"]
license = "MIT"
name = "etnsc-bootstrap"
readme = "README.md"
repository = "https://github.com/sterliakov/etnsc-local"
version = "1.1.0"

[profile.release]
codegen-units = 1
debug = "none"
opt-level = 3
strip = "symbols"
